WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34459
texImage2D and texSubImage2D taking ImageData ignore flipY and premultiplyAlpha
https://bugs.webkit.org/show_bug.cgi?id=34459
Summary
texImage2D and texSubImage2D taking ImageData ignore flipY and premultiplyAlpha
Kenneth Russell
Reported
2010-02-01 17:52:25 PST
The texImage2D and texSubImage2D variants taking ImageData currently ignore the flipY and premultiplyAlpha flags.
Attachments
Patch
(15.17 KB, patch)
2010-02-23 19:08 PST
,
Zhenyao Mo
oliver
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
revised patch : add description replacing the OOPS in change log
(15.25 KB, patch)
2010-02-25 09:55 PST
,
Zhenyao Mo
no flags
Details
Formatted Diff
Diff
revised patch : add detailed description in change logs.
(15.42 KB, patch)
2010-02-25 10:26 PST
,
Zhenyao Mo
no flags
Details
Formatted Diff
Diff
revised patch: remove svn:executable property from html file and remove param name imageData from declaration
(15.22 KB, patch)
2010-02-25 15:03 PST
,
Zhenyao Mo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2010-02-23 19:08:15 PST
Created
attachment 49351
[details]
Patch
Kenneth Russell
Comment 2
2010-02-23 19:25:47 PST
FWIW, I reviewed this patch with Mo and it looks good.
WebKit Commit Bot
Comment 3
2010-02-24 21:58:20 PST
Comment on
attachment 49351
[details]
Patch Rejecting patch 49351 from commit-queue. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 Last 500 characters of output: LRenderingContext.cpp M WebCore/platform/graphics/GraphicsContext3D.cpp M WebCore/platform/graphics/GraphicsContext3D.h A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output: svnlook: Can't write to stream: Broken pipe The following ChangeLog files contain OOPS: trunk/LayoutTests/ChangeLog Please don't ever say "OOPS" in a ChangeLog file. at /usr/local/git/libexec/git-core/git-svn line 558 Full output:
http://webkit-commit-queue.appspot.com/results/309342
Zhenyao Mo
Comment 4
2010-02-25 09:55:51 PST
Created
attachment 49501
[details]
revised patch : add description replacing the OOPS in change log
Zhenyao Mo
Comment 5
2010-02-25 10:26:25 PST
Created
attachment 49509
[details]
revised patch : add detailed description in change logs.
Zhenyao Mo
Comment 6
2010-02-25 15:03:33 PST
Created
attachment 49534
[details]
revised patch: remove svn:executable property from html file and remove param name imageData from declaration
David Levin
Comment 7
2010-02-25 16:20:06 PST
Comment on
attachment 49534
[details]
revised patch: remove svn:executable property from html file and remove param name imageData from declaration r+ based on Oliver's past review and the incremental diff to the current state.
WebKit Commit Bot
Comment 8
2010-02-26 07:49:05 PST
Comment on
attachment 49534
[details]
revised patch: remove svn:executable property from html file and remove param name imageData from declaration Clearing flags on attachment: 49534 Committed
r55283
: <
http://trac.webkit.org/changeset/55283
>
WebKit Commit Bot
Comment 9
2010-02-26 07:49:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug