2010-02-26  Zhenyao Mo  <zmo@google.com>

Reviewed by David Levin.

        texImage2D and texSubImage2D taking ImageData ignore flipY and premultiplyAlpha
        https://bugs.webkit.org/show_bug.cgi?id=34459

        * fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data-expected.txt: Added.
        * fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data.html: Added.
2010-02-26  Zhenyao Mo  <zmo@google.com>

        Reviewed by David Levin.

        texImage2D and texSubImage2D taking ImageData ignore flipY and premultiplyAlpha
        https://bugs.webkit.org/show_bug.cgi?id=34459

        Test: fast/canvas/webgl/tex-image-and-sub-image-2d-with-image-data.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::texImage2D): Apply flipY and premultiplyAlpha to the texture data.
        (WebCore::WebGLRenderingContext::texSubImage2D): Ditto.
        * platform/graphics/GraphicsContext3D.cpp:
        (WebCore::GraphicsContext3D::extractImageData): Extract data from ImageData, applying flipY and premultiplyAlpha.
        * platform/graphics/GraphicsContext3D.h: Add function extractImageData declaration.

Canonical link: https://commits.webkit.org/46584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55283 268f45cc-cd09-0410-ab3c-d52691b4dbfc