WebCore/platform/graphics/GraphicsContext3D.h
@@ -72,6 +72,7 @@ namespace WebCore {
     class WebGLShader;
     class WebGLTexture;
     class Image;
+    class ImageData;
 
     struct ActiveInfo {
         String name;
@@ -444,6 +445,14 @@ namespace WebCore {
                               Vector<uint8_t>& imageData,
                               unsigned int* format,
                               unsigned int* internalFormat);
+
+        // Extracts the contents of the given ImageData into the passed
+        // Vector, obeying the flipY and premultiplyAlpha flags.
+        // Returns true upon success.
+        bool extractImageData(ImageData*,
+                              bool flipY,
+                              bool premultiplyAlpha,
+                              Vector<uint8_t>& data);
 
         // Processes the given image data in preparation for uploading
         // via texImage2D or texSubImage2D. The input data must be in
